--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title : Archive
-description: Yet another developer blog
+description: My archives
 header : Post Archive
 group: navigation
 ---
